[package]
name = "rs485-transport"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "~0.5.2"
nom = { version = "~5.1", default-features = false }
crc = { version = "~1.8.1", default-features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
